objects/Expense_Items__c/Expense_Items__c.object-meta.xml
<CustomObject>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Course Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>