objects/Expense_Items__c/fields/Course_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Course_Invoice__c</fullName>
    <label>Course Invoice</label>
    <referenceTo>Course_Invoice__c</referenceTo>
    <relationshipName>Course_Invoice_Lines1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>