objects/Expense_Items__c/fields/Mileage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Amount__c</fullName>
    <formula>Mileage__c * Mileage_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>